--- a/main.tex
+++ b/main.tex
@@ -328,50 +328,33 @@ Wässrige Nitratlösungen von \abinitio Molecular Dynamics} % Your thesis title,
 
 \begin{abstract}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
-The interfacial structure and dynamics of solutions containing alkaline nitrates have been studied by density functional theory-based 
-molecular dynamics (DFTMD) simulations. In particular we have presented a detailed analysis of the hydrogen bond (HB) structure at the interface and 
+The interfacial structure and dynamics of solutions containing alkaline nitrates and alkaline halides have been studied by density functional theory-based 
+molecular dynamics (DFTMD) simulations. We have presented a detailed analysis of the hydrogen bond (HB) structure at the interface and 
 have calculated the interface vibrational sum-frequency generation (VSFG) spectra to provide a molecular interpretation of available experimental data.
-Based on the calculation of the maximally-localized Wannier functions (MLWFs), the parameterization of the spatial gradient of the components of the dipole moment 
-and the polarization is realized. Therefore, the calculation of the correlation between the dipole moment and the polarization is 
+The calculation of the correlation between the dipole moment and the polarization is 
 transformed into the calculation of the velocity auto-correlation function (VACF).
 
 %
-We have analyzed the behaviour of an aqueous interface containing LiNO$_3$.
-Both the measured and calculated VSFG spectra shows a reduced intensity in the lower frequency portion,
+Both the measured and calculated VSFG spectra of alkaline nitrate solution show a reduced intensity in the lower frequency portion,
 when compared to the water/vapor interface.
-This reduction is attributed to the hydrogen (H-) bonds established between the \nitrate and the surrounding water molecules at the interface.
-This effects is only related to the presence of the \nitrate at the water surface and is not affected by the presence of alkali metal ions.
-We have shown that the use of simple models, such as small cluster is not suitable to reproduce the experimental spectra 
-and cannot provide a microscopic interpretation of the spectra.
-Realistic models of the interface are required to address the perturbation of the ion at the water surface.
+This reduction is attributed to the hydrogen (H-) bonds established between the nitrate and the surrounding water molecules at the interface.
+This effects is only related to the presence of the nitrate at the water surface and is not affected by the presence of alkali metal ions.
+We have shown that, to provide a microscopic interpretation of the spectra,
+realistic models of the interface are required to address the perturbation of the ion at the water surface.
 
-%
+Heavier halide anions have a similar effect to nitrate ions on the structure and dynamics of the water/vapor interface.
 From the results of nonlinear susceptibilities, we conclude that water molecules at the interfaces of LiI, NaI, and KI solutions are participating
 in weaker H-bonds, compared with those at the water/vapor interface.
 The origin of the characteristics comes from a unique distribution of \I ions and alkali metal cations,
 which form a double layer over the thickness on the order of 5--10 \A.
 
-%
-%For the bulk and the interfacial systems,we calculated the correlation functions of the HB population, 
-%and obtained the reaction rate constants with the HB formation and breakage. 
 To analyze the HB dynamics at interfaces, 
-we determined the Willard-Chandler instantaneous interface based on spatial density, 
-and proposed a statistical scheme based on the interfacial HB (IHB) population operator for the instantaneous interface.
-Combining this method with interfacial molecule sampling (IMS), we have obtained more realistic HB dynamics for the water/vapor interface.
-This combination gives us a method to determine the thickness of the water/vapor interface from the perspective
-of HB dynamics.
+we determined the instantaneous interface based on spatial density, 
+and proposed a statistical scheme based on the interfacial HB (IHB) population for the instantaneous interface.
+Combining the IHB method with interfacial molecule sampling (IMS), we have obtained more realistic HB dynamics for the water/vapor interface.
+This combination gives a method to determine the thickness of the water/vapor interface.
+The IHB method can also be extended to the solvation shells of ions in aqueous solutions.
 
-%
-The IHB method is also extended to general interface systems, such as the solvation shells of ions in aqueous solutions.
-The difference between the HB dynamics in the first solvation shell of \Li and that of nitrate-water Hydrogen bonds
-at interfaces is not visible from the values of the HB relaxation time. 
-For the interface of alkaline iodide solutions, we find that the cations does not alter the H-bonding network 
-outside the first solvation shell of the cations themselves.
-Through the solvation shell HB (SHB) dynamics, we obtained that 
-the HB dynamics for the H-bonds between water molecules in the first and the second solvation shell are not sensitive to the ions' nature.
-In contrast, the reorientation dynamics for the water molecules in the first solvation shell of ions is significantly affected by the ions. 
-
-%
 Finally, the distribution of the number of H-bonds per OH group at a given instantaneous interface promotes our understanding of the difference between the alkaline nitrate
 solution/vapor and the water/vapor interfaces. In particular, the ratio of free OH bonds for interfaces affects the decay rate of the reorientation relaxation of water
 molecules and the $\Im \chi^{(2)}$ spectrum of the alkaline nitrate interface.
@@ -383,27 +366,35 @@ molecules and the $\Im \chi^{(2)}$ spectrum of the alkaline nitrate interface.
 {\selectlanguage{ngerman}
 \begin{extraAbstract}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
-Die Grenzflächenstruktur und -dynamik von Lösungen, die alkalische Nitrate enthalten, wurden auf der Grundlage der Dichtefunktionaltheorie untersucht
-Molekulardynamik (DFTMD)-Simulationen. Insbesondere haben wir eine detaillierte Analyse der Wasserstoffbrücken(HB)-Struktur an der Grenzfläche vorgelegt und die Grenzflächenschwingung berechnet Summe-Frequenz-Generation (VSFG)-Spektren, um eine molekulare Interpretation der verfügbaren experimentellen Daten bereitzustellen. Basierend auf der Berechnung der maximal-lokalisierten Wannier-Funktionen (MLWFs) erfolgt die Parametrisierung des räumlichen Gradienten der Komponenten des Dipolmoments und der Polarisation. Daher wird die Berechnung der Korrelation zwischen Dipolmoment und Polarisation in die Berechnung der Geschwindigkeits-Autokorrelationsfunktion (VACF) umgewandelt.
+Die Grenzflächenstruktur und -dynamik von Lösungen, die alkalische Nitrate und alkalische Halogenide enthalten, wurden auf der Grundlage der Dichtefunktionaltheorie untersucht
+Molekulardynamik (DFTMD)-Simulationen. Wir haben eine detaillierte Analyse der Wasserstoffbrücken(HB)-Struktur an der Grenzfläche vorgelegt und
+haben die Spektren der Grenzflächenschwingungssummenfrequenzerzeugung (VSFG) berechnet, um eine molekulare Interpretation der verfügbaren experimentellen Daten bereitzustellen.
+Die Berechnung der Korrelation zwischen Dipolmoment und Polarisation ist
+in die Berechnung der Geschwindigkeits-Autokorrelationsfunktion (VACF) umgewandelt.
 
-%
-Wir haben das Verhalten einer wässrigen Grenzfläche mit LiNO3 analysiert. Sowohl die gemessenen als auch die berechneten VSFG-Spektren zeigen eine reduzierte Intensität im unteren Frequenzbereich im Vergleich zur Wasser/Dampf-Grenzfläche. Diese Reduktion wird den Wasserstoff-(H-)-Bindungen zugeschrieben, die zwischen dem \nitrate und den umgebenden Wassermolekülen an der Grenzfläche aufgebaut werden. Dieser Effekt hängt nur mit der Anwesenheit von \nitrate an der Wasseroberfläche zusammen und wird durch die Anwesenheit von Alkalimetallionen nicht beeinflusst. Wir haben gezeigt, dass die Verwendung einfacher Modelle, wie z. B. kleiner Cluster, nicht geeignet ist, die experimentellen Spektren zu reproduzieren und eine mikroskopische Interpretation der Spektren nicht liefern kann. Realistische Modelle der Grenzfläche sind erforderlich, um die Störung des Ions an der Wasseroberfläche zu berücksichtigen.
+Sowohl die gemessenen als auch die berechneten VSFG-Spektren der alkalischen Nitratlösung zeigen eine reduzierte Intensität im unteren Frequenzbereich,
+im Vergleich zur Wasser/Dampf-Grenzfläche.
+Diese Reduktion wird den Wasserstoff-(H-)-Bindungen zugeschrieben, die zwischen dem Nitrat und den umgebenden Wassermolekülen an der Grenzfläche aufgebaut werden.
+Dieser Effekt hängt nur mit der Anwesenheit des Nitrats an der Wasseroberfläche zusammen und wird durch die Anwesenheit von Alkalimetallionen nicht beeinflusst.
+Wir haben gezeigt, dass für eine mikroskopische Interpretation der Spektren
+realistische Modelle der Grenzfläche sind erforderlich, um die Störung des Ions an der Wasseroberfläche zu untersuchen.
 
-Aus den Ergebnissen nichtlinearer Suszeptibilitäten schließen wir, dass Wassermoleküle an den Grenzflächen von LiI-, NaI- und KI-Lösungen im Vergleich zu denen an der Wasser/Dampf-Grenzfläche an schwächeren H-Brücken beteiligt sind. Der Ursprung der Eigenschaften liegt in einer einzigartigen Verteilung von \I-Ionen und Alkalimetallkationen,
-die eine Doppelschicht über die Dicke in der Größenordnung von 5-10 \A \ bilden.
+Schwerere Halogenidanionen haben einen ähnlichen Effekt wie Nitrationen auf die Struktur und Dynamik der Wasser/Dampf-Grenzfläche.
+Aus den Ergebnissen nichtlinearer Suszeptibilitäten schließen wir, dass Wassermoleküle an den Grenzflächen von LiI-, NaI- und KI-Lösungen beteiligt sind
+in schwächeren Wasserstoffbrücken, verglichen mit denen an der Wasser/Dampf-Grenzfläche.
+Der Ursprung der Eigenschaften liegt in einer einzigartigen Verteilung von Jodionen und Alkalimetallkationen,
+die eine Doppelschicht über die Dicke in der Größenordnung von 5-10 Angström bilden.
 
-%
-%Für das Volumen- und Grenzflächensystem berechneten wir die Korrelationsfunktionen der HB-Population und erhielten die Reaktionsgeschwindigkeitskonstanten mit HB-Bildung und -Bruch.
-Um die HB-Dynamik an Grenzflächen zu analysieren, haben wir die Willard-Chandler-Momentan-Schnittstelle basierend auf der räumlichen Dichte bestimmt und ein statistisches Schema basierend auf dem Grenzflächen-HB (IHB)-Populationsoperator für die momentane Schnittstelle vorgeschlagen. Durch die Kombination dieser Methode mit Interfacial Molecule Sampling (IMS) haben wir eine realistischere HB-Dynamik für die Wasser/Dampf-Grenzfläche erhalten. Diese Kombination gibt uns eine Methode zur Bestimmung der Dicke der Wasser/Dampf-Grenzfläche aus Sicht der HB-Dynamik.
+Um die HB-Dynamik an Grenzflächen zu analysieren,
+Wir haben die momentane Schnittstelle basierend auf der räumlichen Dichte bestimmt,
+und schlug ein statistisches Schema vor, das auf der Grenzflächen-Wasserstoffbrücken(IHB)-Population für die momentane Grenzfläche basiert.
+Durch die Kombination der IHB-Methode mit der Grenzflächenmolekülprobenahme (IMS) haben wir eine realistischere HB-Dynamik für die Wasser/Dampf-Grenzfläche erhalten.
+Diese Kombination ergibt ein Verfahren zur Bestimmung der Dicke der Wasser/Dampf-Grenzfläche.
+Die IHB-Methode kann auch auf die Solvathüllen von Ionen in wässrigen Lösungen erweitert werden.
 
-Die IHB-Methode wird auch auf allgemeine Grenzflächensysteme, wie die Solvathüllen von Ionen in wässrigen Lösungen, erweitert. Der Unterschied zwischen der HB-Dynamik in der ersten Solvathülle von Li und der von Nitrat-Wasser-Wasserstoffbrücken an Grenzflächen ist aus den Werten der HB-Relaxationszeit nicht ersichtlich. Für die Grenzfläche von alkalischen Iodidlösungen stellen wir fest, dass die Kationen das H-Brückennetzwerk außerhalb der ersten Solvathülle der Kationen selbst nicht verändern.
-Durch die Solvatationsschalen-HB(SHB)-Dynamik haben wir erhalten, dass
-die HB-Dynamik für die H-Brücken zwischen Wassermolekülen in der ersten und zweiten Solvathülle ist nicht empfindlich gegenüber der Natur der Ionen.
-Im Gegensatz dazu wird die Umorientierungsdynamik für die Wassermoleküle in der ersten Solvathülle der Ionen durch die Ionen signifikant beeinflusst.
-
-%
-Schließlich fördert die Verteilung der Anzahl von H-Brücken pro OH-Gruppe an einer gegebenen momentanen Grenzfläche unser Verständnis des Unterschieds zwischen der alkalischen Nitratlösung/Dampf und der Wasser/Dampf-Grenzfläche. Insbesondere das Verhältnis der freien OH-Bindungen für Grenzflächen beeinflusst die Abklingrate der Reorientierungsrelaxation von Wassermolekülen und das $\Im \chi^{(2)}$-Spektrum der alkalischen Nitratgrenzfläche.
-
+Schließlich fördert die Verteilung der Anzahl von H-Brücken pro OH-Gruppe an einer gegebenen Momentangrenzfläche unser Verständnis des Unterschieds zwischen den alkalischen Nitraten
+Lösung/Dampf und die Wasser/Dampf-Grenzflächen. Insbesondere das Verhältnis der freien OH-Bindungen für Grenzflächen beeinflusst die Abklingrate der Umorientierungsrelaxation von Wasser
+Moleküle und das $\Im \chi^{(2)}$-Spektrum der alkalischen Nitratgrenzfläche.
 \end{extraAbstract}
 }
 \selectlanguage{english}
@@ -451,11 +442,11 @@ I thank Prof. Jin Yuliang for his support, trust and teachings over the past yea
 
 %
 I would like to thank the following teachers who have benefited me for life:
-Mr. Lu Yongliang,  
+Mr. Lu Yongliang, 
 Mr. Yang Bing, Mr. Chen Jiexian, Mr. Chen Jiangen, Mr. Li Yiji,
 Mr. Wu Xiukui, Mr. Chen Wenfeng, Mr. Liao Changchun, Mr. Zhou Wende,
-Mr. Yan Zhengzhou, Ms. Ran Qiyin, Mr. Luo Zhiquan, Mr. Fan Silin, Mr. Tao Caide,
-Mr. Tan Lei, Mr. Liu Yuxiao.
+Mr. Yan Zhengzhou, Prof. Huang Ruibin, Prof. Ran Qiyin, Prof. Huang Yong, Prof. Luo Zhiquan, Prof. Fan Silin, Prof. Tao Caide, Prof. Ren Weiyi, 
+Prof. Tan Lei and Prof. Liu Yuxiao.
 
 %
 I am grateful to my parents Diao Yuhua and Huang Dehuai, and my brother Jialiang, for their care, 
@@ -495,11 +486,14 @@ I will always remember the kindness, open-mindedness, diligence and perseverance
 \textbf{CPMD} & \textbf{C}ar-\textbf{P}arrinello \textbf{M}olecular \textbf{D}ynamics\\
 \textbf{DFT} & \textbf{D}ensity \textbf{F}unctional \textbf{T}heory\\
 \textbf{DFTMD} & \textbf{D}ensity \textbf{F}unctional \textbf{T}heory-based \textbf{M}olecular \textbf{D}ynamics\\
+\textbf{EDA} & \textbf{E}lectric \textbf{D}ipole \textbf{A}pproximation\\
 \textbf{GGA} & \textbf{G}eneralised \textbf{G}radient \textbf{A}pproximation\\
+\textbf{GPW} & \textbf{G}aussian and \textbf{P}lane \textbf{W}aves\\
 \textbf{H-} & \textbf{H}ydrogen\\
 \textbf{HB} & \textbf{H}ydrogen \textbf{B}ond\\
 \textbf{HK} & \textbf{H}ohenberg-\textbf{K}ohn\\
 \textbf{IHB} & \textbf{I}nterfacial \textbf{H}ydrogen \textbf{B}ond\\
+\textbf{IMS} & \textbf{I}nterfacial \textbf{M}olecule \textbf{S}ampling\\
 \textbf{KS} & \textbf{K}ohn-\textbf{S}ham\\
 \textbf{LDA} & \textbf{L}ocal \textbf{D}ensity \textbf{A}pproximation\\
 \textbf{MD} & \textbf{M}olecular \textbf{D}ynamics\\
@@ -636,7 +630,6 @@ $\gamma$ & surface tension & \\
 $S_{\text{HB}}(t)$ (or $s(t)$)& survival probability of HB & \\
 $t_\text{t}$ & temporal resolutions for calculating HB dynamics & \\
 $a_i$ & thermodynamic activity of a chemical species $i$ & \\
-$K^\ominus$ & thermodynamic equilibrium constant &  \\
 $d$ & thickness of layer of interface (model) & \\
 $\tau$ & time for switching allegiance of a HB & \\
 $\hat{\mu}(t)$ & unit vector of the transition dipole & \\
@@ -645,6 +638,7 @@ $z_i$ & valence of species $i$ & \\
 ${\bf v}$ & velocity of an atom & \\
 $C(t)$ & velocity auto-correlation function & \\
 $\nu$ & vibrational frequency, or  vibrational quantum number& \\
+%$K^\ominus$ & thermodynamic equilibrium constant &  \\
 \end{symbols}
 
 %----------------------------------------------------------------------------------------
@@ -684,10 +678,10 @@ $\nu$ & vibrational frequency, or  vibrational quantum number& \\
 %%\include{Appendices/AppendixA}
 \include{chapters/chap_susceptibility/chap_susceptibility}
 \include{chapters/chap_simulations/chap_simulations}
+\include{chapters/chap_hbd/chap_hbd}
 \include{chapters/chap_structure/chap_structure}
 \include{chapters/chap_propensities/chap_propensities}
 \include{chapters/chap_thickness/chap_thickness}
-\include{chapters/chap_hbd/chap_hbd}
 %
 %%\include{chapters/chap_hkt/chap_hkt}
 
