--- a/example.bib
+++ b/example.bib
@@ -6543,8 +6543,8 @@ URL = {https://pubs.acs.org/doi/full/10.1021/jacs.6b05122}
 @article{Werhahn2011,
 abstract={The lifetimes of the OH stretching vibrations for the 3 individual bonds are 2.2 ps (weak), 1.7 ps (bifurcated), and 1.2 ps (trong).},
 author = {Jasper C. Werhahn and Stanislav Pandelov and Sotiris S. Xantheas and Hristo Iglev},
-title = {Dynamics of Weak, Bifurcated, and Strong Hydrogen Bonds in Lithium
-Nitrate Trihydrate},
+title = {Dynamics of weak, bifurcated, and strong hydrogen bonds in lithium
+nitrate trihydrate},
 journal = {J. Phys. Chem. Lett.},
 volume = {2},
 pages = {1633--1638},
@@ -7189,7 +7189,7 @@ abstract= {{We provide a detailed description of the structure of water at the i
 }
 @ARTICLE{Jonas96,
 author = {Jonas, David M. and Lang, Matthew J. and Nagasawa, Yutaka and Joo, Taiha and Fleming, Graham R.},
-title = {{Pump-Probe Polarization Anisotropy Study of Femtosecond Energy Transfer within the Photosynthetic Reaction Center of Rhodobacter sphaeroides R26}},
+title = {{Pump-probe polarization anisotropy study of femtosecond energy transfer within the photosynthetic reaction center of rhodobacter sphaeroides R26}},
 doi={10.1021/jp960708t},
 url={https://doi.org/10.1021/jp960708t},
 journal = {J. Phys. Chem.},
@@ -7200,7 +7200,7 @@ pages = {12660--12673}
 }
 @ARTICLE{Farrow08,
 author = {Farrow, Darcie A and Qian, Wei and Smith, Eric R. and Ferro, Allison A and Jonas, David M.},
-title = {{Polarized Pump-probe Measurements of Electronic Motion via a Conical Intersection}},
+title = {{Polarized pump-probe measurements of electronic motion via a conical intersection}},
 journal = {J. Chem. Phys.},
 year = {2006},
 volume = {128},
