--- a/example.bib
+++ b/example.bib
@@ -570,7 +570,7 @@ L'eau est un liquide dont les propriétés sont extraordinaires. Elle a une trè
 }
 @ARTICLE{Rapaport1983,
     author = {D. C. Rapaport},
-    title = {{Hydrogen Bonds in Water: Network Organization and Lifetimes}},
+    title = {{Hydrogen bonds in water: Network organization and lifetimes}},
     journal = {Mol. Phys.},
     year = {1983},
     volume = {50},
@@ -789,7 +789,7 @@ L'eau est un liquide dont les propriétés sont extraordinaires. Elle a une trè
 }
 @ARTICLE{Corcelli2004,
     author = {S. A. Corcelli and  C. P. Lawrence and J. L. Skinner},
-    title = {{Combined Electronic Structrue/Molecular Dynamics Approach for Ultrafast Infrared Spectroscopy of Dilute HOD in Liquid H$_2$O and D$_2$O}},
+    title = {{Combined electronic structrue/molecular dynamics approach for ultrafast infrared spectroscopy of dilute HOD in liquid H$_2$O and D$_2$O}},
     journal = {J. Chem. Phys.},
     year = {2004},
     volume = {120},
@@ -810,7 +810,7 @@ L'eau est un liquide dont les propriétés sont extraordinaires. Elle a une trè
 }
 @ARTICLE{Corcelli2005,
     author = {S. A. Corcelli and J. L. Skinner},
-    title = {{Infrared and Raman Line Shapes of Dilute HOD in Liquid H$_2$O and D$_2$O from 10 to 90 $^{\circ}$C}},
+    title = {{Infrared and raman line shapes of dilute HOD in liquid H$_2$O and D$_2$O from 10 to 90 $^{\circ}$C}},
     journal = {J. Phys. Chem. A},
     year = {2005},
     volume = {109},
@@ -1066,13 +1066,13 @@ URL = {https://doi.org/10.1063/1.464521},
 }
 @ARTICLE{SP05,
     author = {S. Pal and B. Bagchi and S. Balasubramanian},
-    title = {{Hydration Layer of a Cationic Micelle, C$_{10}$TAB: Structure, Rigidity, Slow Reorientation, Hydrogen Bond Lifetime, and Solvation Dynamics}},
+    title = {{Hydration layer of a cationic micelle, C$_{10}$TAB: Structure, rigidity, slow reorientation, hydrogen bond lifetime, and solvation dynamics}},
     journal = {J. Phys. Chem. B},
     year = {2005},
     volume = {109},
     doi = {10.1021/jp0510793},
     url = {https://pubs.acs.org/doi/abs/10.1021/jp0510793},
-    pages = {12879-12890}
+    pages = {12879--12890}
 }
 @Article{Luzar1996,
     author ="Luzar, A.",
@@ -1184,13 +1184,13 @@ URL = {https://doi.org/10.1063/1.464521},
 }
 @BOOK{RPF65,
     author = {R. P. Feynman and A. R. Hibbs},
-    title = {{Quantum Mechanics and Path Integrals}},
+    title = {{Quantum mechanics and path integrals}},
     year = {1965},
     publisher = {New York: McGraw-Hill}
 }
 @BOOK{RPF72,
     author = {R. P. Feynman},
-    title = {{Statistical Mechanics: A Set of Lectures}},
+    title = {{Statistical mechanics: A set of lectures}},
     year = {1972},
     publisher = {Benjamin}
 }
@@ -1350,7 +1350,7 @@ URL = {https://doi.org/10.1063/1.464521},
     number = {1},
     doi = {10.1080/014423500229882},
     URL = {https://doi.org/10.1080/014423500229882},
-    pages = "123-153"
+    pages = "123--153"
 }
 %DT08
 @ARTICLE{Tobias2008,
@@ -4576,12 +4576,15 @@ To obtain the vibrations with the highest frequecies $\nu_\text{max}$, the sampl
     volume = {12},
     pages = {2467}
 }
+%SAC04
 @ARTICLE{Corcelli04,
     author = {S. A. Corcelli and  C. P. Lawrence and J. L. Skinner},
-    title = {{Combined Electronic Structrue/Molecular Dynamics Approach for Ultrafast Infrared Spectroscopy of Dilute HOD in Liquid H$_2$O and D$_2$O}},
+    title = {{Combined electronic structrue/molecular dynamics approach for ultrafast infrared spectroscopy of dilute HOD in liquid H$_2$O and D$_2$O}},
     journal = {J. Chem. Phys.},
     year = {2004},
     volume = {120},
+    doi = {10.1063/1.1683072},
+    url = {https://doi.org/10.1063/1.1683072},
     pages = {8107}
 }
 @ARTICLE{JJL07,
@@ -4744,18 +4747,6 @@ To obtain the vibrations with the highest frequecies $\nu_\text{max}$, the sampl
     volume = {114},
     pages = {145}
 }
-@BOOK{RPF65,
-    author = {R. P. Feynman and A. R. Hibbs},
-    title = {{Quantum Mechanics and Path Integrals}},
-    year = {1965},
-    publisher = {New York: McGraw-Hill}
-}
-@BOOK{RPF72,
-    author = {R. P. Feynman},
-    title = {{Statistical Mechanics: A Set of Lectures}},
-    year = {1972},
-    publisher = {Benjamin}
-}
 @ARTICLE{MCP92,
     author = {M. C. Payne and M. P. Teter and D. C. Allan and T. A. Arias and J. D. Joannopoulos},
     title = {{Iterative Minimization Techniques for Ab Initio Total-Energy Calculations: Molecular Dynamics and Conjugate Gradients}},
@@ -4775,7 +4766,7 @@ To obtain the vibrations with the highest frequecies $\nu_\text{max}$, the sampl
 #DM99
 @ARTICLE{Marx1999,
     author = {D. Marx and M. E. Tuckerman and G. J. Martyna},
-    title = {{Quantum Dynamics via Adiabatic Ab Initio Centroid Molecular Dynamics}},
+    title = {{Quantum dynamics via adiabatic ab initio centroid molecular dynamics}},
     journal = {Comput. Phys. Commun.},
     year = {1999},
     volume = {118},
@@ -4815,17 +4806,6 @@ To obtain the vibrations with the highest frequecies $\nu_\text{max}$, the sampl
     year = {2005},
     volume = {109},
     pages = {8861}
-}
-@ARTICLE{Shultz2010,
-author = "M. J. Shultz and C. Schnitzer and D. Simonelli and S. Baldelli",
-title = {{Sum frequency generation spectroscopy of the aqueous interface: Ionic and soluble molecular solutions}},
-journal = "Int. Rev. Phys. Chem.",
-year = {2010},
-volume = {19},
-number = {1},
-pages = "123--153",
-doi={10.1080/014423500229882},
-url={https://doi.org/10.1080/014423500229882}
 }
 @ARTICLE{Tobias2008,
     author = {D. Tobias and J. C. Hemminger},
@@ -5712,15 +5692,6 @@ year = {1984}
     volume = {133},
     pages = {16875--16880}
 }
-@ARTICLE{SAC04,
-    author = {S. A. Corcelli and  C. P. Lawrence and J. L. Skinner},
-    title = {{Combined electronic structrue/molecular dynamics approach for ultrafast infrared spectroscopy of dilute HOD
-     in liquid H2O and D2O}},
-    journal = {J. Chem. Phys.},
-    year = {2004},
-    volume = {120},
-    pages = {8107}
-}
 @BOOK{HJCB81,
     author = {H. J. C. Berendsen and J. P. M. Postman and W. G. van Gusteren and J. Hermans},
      year = {1981},
@@ -6430,16 +6401,6 @@ abstract ={We performed sum-frequency generation
   pages = {189-216},
   doi={10.1146/annurev-physchem-040214-121322},
 }
-@ARTICLE{Kumar2018,
-  author = {Kumar, M. and Zhong, J. and Zeng, X. C. and Francisco, J. S.},
-  title = {Reaction of criegee intermediate with nitric acid at the air-water interface},
-  journal = {J. Am. Chem. Soc.},
-  year = {2008},
-  volume = {140},
-  number= {14},
-  pages = {4913-4921},
-  doi={10.1021/jacs.8b01191},
-}
 @ARTICLE{Trevani2000,
 author = "Trevani, L. N. and Calvo, E. and Gorti, H. R.",
 title = "Diffusion Coefficients of Iodide in High Temperature Aqueous Solutions",
@@ -6871,16 +6832,6 @@ URL = {http://dx.doi.org/10.1021/jp072997z}
   number={1},
   pages = {016101},
   doi={10.1103/physrevlett.116.016101},
-}
-@ARTICLE{Kumar2018,
-  author = {Kumar, M. and Zhong, J. and Zeng, X. C. and Francisco, J. S.},
-  title = {Reaction of Criegee Intermediate with Nitric Acid at the Air-Water Interface},
-  journal = {J. Am. Chem. Soc.},
-  year = {2008},
-  volume = {140},
-  number= {14},
-  pages = {4913-4921},
-  doi={10.1021/jacs.8b01191},
 }
 @ARTICLE{Abernethy2003,
   author = {Colin D. Abernethy and Gareth M. Codd and Mark D. Spicer
