--- a/main.tex
+++ b/main.tex
@@ -331,8 +331,8 @@ Wässrige Nitratlösungen von \abinitio Molecular Dynamics} % Your thesis title,
 The interfacial structure and dynamics of solutions containing alkaline nitrates and alkaline halides have been studied by density functional theory-based 
 molecular dynamics (DFTMD) simulations. We have presented a detailed analysis of the hydrogen bond (HB) structure at the interface and 
 have calculated the interface vibrational sum-frequency generation (VSFG) spectra to provide a molecular interpretation of available experimental data.
-The calculation of the correlation between the dipole moment and the polarization is 
-transformed into the calculation of the velocity auto-correlation function (VACF).
+%The calculation of the correlation between the dipole moment and the polarization is 
+%transformed into the calculation of the velocity auto-correlation function (VACF).
 
 %
 Both the measured and calculated VSFG spectra of alkaline nitrate solution show a reduced intensity in the lower frequency portion,
@@ -369,8 +369,8 @@ molecules and the $\Im \chi^{(2)}$ spectrum of the alkaline nitrate interface.
 Die Grenzflächenstruktur und -dynamik von Lösungen, die alkalische Nitrate und alkalische Halogenide enthalten, wurden auf der Grundlage der Dichtefunktionaltheorie untersucht
 Molekulardynamik (DFTMD)-Simulationen. Wir haben eine detaillierte Analyse der Wasserstoffbrücken(HB)-Struktur an der Grenzfläche vorgelegt und
 haben die Spektren der Grenzflächenschwingungssummenfrequenzerzeugung (VSFG) berechnet, um eine molekulare Interpretation der verfügbaren experimentellen Daten bereitzustellen.
-Die Berechnung der Korrelation zwischen Dipolmoment und Polarisation ist
-in die Berechnung der Geschwindigkeits-Autokorrelationsfunktion (VACF) umgewandelt.
+%Die Berechnung der Korrelation zwischen Dipolmoment und Polarisation ist
+%in die Berechnung der Geschwindigkeits-Autokorrelationsfunktion (VACF) umgewandelt.
 
 Sowohl die gemessenen als auch die berechneten VSFG-Spektren der alkalischen Nitratlösung zeigen eine reduzierte Intensität im unteren Frequenzbereich,
 im Vergleich zur Wasser/Dampf-Grenzfläche.
