--- a/example.bib
+++ b/example.bib
@@ -742,7 +742,7 @@ L'eau est un liquide dont les propriétés sont extraordinaires. Elle a une trè
     pages = {1066--1069}
 }
 @article{PF00,
-  title = {Three-Wave Mixing in Chiral Liquids},
+  title = {Three-wave mixing in chiral liquids},
   author = {Fischer, Peer and Wiersma, Diederik S. and Righini, Roberto and Champagne, Beno\^{\i}t and Buckingham, A. David},
   journal = {Phys. Rev. Lett.},
   volume = {85},
@@ -3630,7 +3630,7 @@ doi={10.1063/1.1723983}
 }
 @ARTICLE{Frank45b,
 author = {H. S. Frank},
-title = {{Free volume and entropy in condensed systems II. entropy of
+title = {{Free volume and entropy in condensed systems II. Entropy of
 vaporization in liquids and the pictorial theory of the liquid state}},
 journal = {J. Chem. Phys.},
 year = {1945},
@@ -3641,7 +3641,7 @@ doi={10.1063/1.1723984}
 }
 @ARTICLE{Frank45c,
 author = {H. S. Frank and M. W. Evans },
-title = {{Free volume and entropy in condensed systems III. entropy in binary
+title = {{Free volume and entropy in condensed systems III. Entropy in binary
 liquid mixtures; partial molal entropy in dilute solutions; structure and
 thermodynamics in aqueous electrolytes}},
 journal = {J. Chem. Phys.},
@@ -4066,7 +4066,7 @@ pages = {2768--2774}
 }
 @ARTICLE{Miranda99,
 author = {P. B. Miranda and Y. R. Shen},
-title = {{Liquid Interfaces: A Study by Sum-Frequency Vibrational Spectroscopy}},
+title = {{Liquid interfaces: A study by sum-frequency vibrational spectroscopy}},
 journal = {J. Phys. Chem. B},
 year = {1999},
 volume = {103},
@@ -4355,13 +4355,13 @@ but the shell is quite flexible and the hydrogen-bond interactions between NO3- 
 %Shen84
 @BOOK{ShenYR1984,
 author = {Y. R. Shen},
-title = {{Principle of Nonlinear Optics}},
+title = {{Principle of nonlinear optics}},
 publisher= {Wiley, New York},
 year = {1984}
 }
 @ARTICLE{ASeidl,
     author = {A. Seidl},
-    title = {{Generalized Kohn-Sham Schemes and the Band-Gap Problem}},
+    title = {{Generalized Kohn-Sham schemes and the band-gap problem}},
     journal = {Phys. Rev. B},
     year = {1996},
     volume = {53},
@@ -4400,29 +4400,29 @@ year = {1984}
 }
 @BOOK{1995SM,
     author = {S. Mukamel},
-    title = {{Principles of Nonlinear Optical Spectroscopy}},
+    title = {{Principles of nonlinear optical spectroscopy}},
     publisher = {Oxford University Press, Oxford},
     year = {1995}
 }
 @ARTICLE{Knobeloch00,
     author = {L. Knobeloch and  B.Salna and  A. Hogan and  J. Postle and H. Anderson},
-    title = {{Blue Babies and Nitrate-Contaminated Well Water}},
+    title = {{Blue babies and nitrate-contaminated well water}},
     journal = {Environmental Health Perspectives},
     year = {2000},
     volume = {108},
-    pages = {675-678}
+    pages = {675--678}
 }
 
 @ARTICLE{WHO11,
     author = {World Health Organization},
-    title = {{Nitrate and Nitrite in Drinking-water}},
+    title = {{Nitrate and nitrite in drinking-water}},
     journal = {Background document for development of WHO Guidelines for Drinking-water
 Quality},
     year = {2011}
 }
 @ARTICLE{Ufimtsev2011,
   author = {Ivan S. Ufimtsev and Nathan Luehr and Todd J. Martinez},
-  title = {Charge Transfer and Polarization in Solvated Proteins from Ab Initio Molecular Dynamics},
+  title = {Charge transfer and polarization in solvated proteins from ab initio molecular dynamics},
   journal = {J. Phys. Chem. Lett.},
   volume = {2},
   number = {14},
@@ -4433,7 +4433,7 @@ Quality},
 }
 @BOOK{MTD,
     author = {M. T. Dove},
-    title = {{Introduction to Lattice Dynamics}},
+    title = {{Introduction to lattice dynamics}},
     year = {1993},
     publisher = {Cambridge: Cambridge University Press}
 }
@@ -8153,7 +8153,7 @@ url = {https://doi.org/10.1021/jp036266k}
 }
 @ARTICLE{Loparo2006b,
 author = {Joseph J. Loparo, Sean T. Roberts and Andrei Tokmakoff},
-title = {{Multidimensional infrared spectroscopy of water. II. hydrogen bond switching dynamics}},
+title = {{Multidimensional infrared spectroscopy of water. II. Hydrogen bond switching dynamics}},
 journal = {J. Chem. Phys.},
 year = {2006},
 volume = {125},
