--- a/example.bib
+++ b/example.bib
@@ -8266,6 +8266,119 @@ URL = {
   doi = {10.1103/PhysRevLett.103.238302},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.103.238302}
 }
+@ARTICLE{LeeCM2013,
+author = {Christopher M. Lee and Naseer M. A. Mohamed and Heath D. Watts and James D. Kubicki and Seong H. Kim},
+title = {{Sum-Frequency-Generation Vibration Spectroscopy and Density Functional Theory Calculations with Dispersion Corrections (DFT-D2) for Cellulose Iα and Iβ}},
+journal = {J. Phys. Chem. B},
+year = {2013},
+volume = {117},
+number ={22},
+pages = {6681--6692},
+doi = {10.1021/jp402998s},
+url = {https://doi.org/10.1021/jp402998s}
+}
+@ARTICLE{Ohto2018,
+author = {Tatsuhiko Ohto and Hirokazu Tadaa and Yuki Nagata},
+title = {{Structure and dynamics of water at water-graphene and water-hexagonal
+boron-nitride sheet interfaces revealed by ab initio sum-frequency generation spectroscopy}},
+journal = {Phys. Chem. Chem. Phys},
+year = {2018},
+volume = {20},
+number ={},
+pages = {12979},
+doi = {10.1039/c8cp01351a},
+url = {https://pubs.rsc.org/en/content/articlepdf/2018/cp/c8cp01351a}
+}
+@ARTICLE{LeeCM2015,
+author = {Christopher M. Lee James D. Kubicki Bingxin Fan Linghao Zhong Michael C. Jarvis and Seong H. Kim},
+title = {{Hydrogen-bonding network and OH stretch vibration of cellulose: Comparison of computational modeling with polarized IR and SFG spectra}},
+journal = {J. Phys. Chem. B},
+year = {2015},
+volume = {119},
+number ={49},
+pages = {15138--15149},
+doi = {10.1021/acs.jpcb.5b08015},
+url = {https://doi.org/10.1021/acs.jpcb.5b08015}
+}
+@ARTICLE{Hosseinpour2017,
+author = {Saman Hosseinpour and Fujie Tang and Fenglong Wang and Ruth A. Livingstone and Simon J. Schlegel and
+Tatsuhiko Ohto and Mischa Bonn and Yuki Nagata and Ellen H. G. Backus},
+title = {{Chemisorbed and physisorbed water at the TiO$_2$/water interface}},
+journal = {J. Phys. Chem. Lett.},
+year = {2017},
+volume = {8},
+pages = {2095--2199},
+doi = {10.1021/acs.jpclett.7b00564},
+url = {https://doi.org/10.1021/acs.jpclett.7b00564}
+}
+@ARTICLE{Santos2018,
+author = {Jaciara C. C. Santos and Fabio R. Negreiros and Luana S. Pedroza and Gustavo M. Dalpian and Paulo B. Miranda},
+title = {{Interaction of water with the gypsum (010) surface: Structure and dynamics from nonlinear vibrational spectroscopy and ab initio molecular dynamics}},
+journal = {J. Am. Chem. Soc.},
+year = {2018},
+volume = {140},
+number ={49},
+pages = {17141--17152},
+doi = {10.1021/jacs.8b09907},
+url = {https://doi.org/10.1021/jacs.8b09907}
+}
+@ARTICLE{Pezzotti2018,
+author = {Simone Pezzotti and Daria Ruth Galimberti and Y. Ron Shen and Marie-Pierre Gaigeot},
+title = {{What the diffuse layer (DL) reveals in non-linear SFG spectroscopy}},
+journal = {Minerals},
+year = {2018},
+volume = {8},
+number ={7},
+pages = {305},
+doi = {10.3390/min8070305},
+url = {https://doi.org/10.3390/min8070305}
+}
+@ARTICLE{Nagata2016b,
+author = {Nagata, Yuki and Ohto, Tatsuhiko and Backus, Ellen H. G. and Bonn, Mischa},
+title = {{Molecular modeling of water interfaces: From molecular spectroscopy to thermodynamics}},
+journal = {J. Phys. Chem. B},
+year = {2016},
+volume = {120},
+number ={16},
+pages = {3785--3796},
+doi = {10.1021/acs.jpcb.6b01012},
+url = {https://doi.org/10.1021/acs.jpcb.6b01012}
+}
+@ARTICLE{Ohto2016,
+title = {{Unveiling the amphiphilic nature of TMAO by vibrational sum frequency generation spectroscopy}},
+author = {Tatsuhiko Ohto and Ellen H. G. Backus and Wataru Mizukami and Johannes Hunger and Mischa Bonn and Yuki Nagata},
+year = {2016},
+journal = {J. Phys. Chem. C},
+volume = {120},
+number ={31},
+pages = {17435--17443},
+doi = {10.1021/acs.jpcc.6b04852},
+url = {https://doi.org/10.1021/acs.jpcc.6b04852}
+}
+@article{WanQ2015,
+  title = {First-principles framework to compute sum-frequency generation vibrational spectra of semiconductors and insulators},
+  author = {Wan, Quan and Galli, Giulia},
+  journal = {Phys. Rev. Lett.},
+  volume = {115},
+  issue = {24},
+  pages = {246404},
+  year = {2015},
+  month = {Dec},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.115.246404},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.115.246404}
+}
+@ARTICLE{,
+author = {},
+title = {{}},
+journal = {},
+year = {20},
+volume = {},
+number ={},
+pages = {},
+doi = {},
+url = {}
+}
 @ARTICLE{,
 author = {},
 title = {{}},
