--- a/main.tex
+++ b/main.tex
@@ -544,7 +544,7 @@ speed of light in vacuum  & $c$ & \SI{299 792 458}{\meter\per\second} (exact)
 
 \addlinespace % Gap to separate the Roman symbols from the Greek
 
-$f_i$ & activity coefficient of species $i$ & \\
+%$f_i$ & activity coefficient of species $i$ & \\
 $Z_{\text{X}}$ & atomic number of atom X & \\
 ${\bf R}$ & atomic coordinates & \\
 $\tau_{\mathrm{a}}$ & average lifetime of H-bonds: $\langle\tau_{\mathrm{a}}\rangle = \int_0^\infty tP_{\mathrm{a}}(t) d t $ & \\
@@ -629,7 +629,7 @@ $K_{\text{p,X}}$ & surface/bulk molar concentration ratio of ion X &  \\
 $\gamma$ & surface tension & \\
 $S_{\text{HB}}(t)$ (or $s(t)$)& survival probability of HB & \\
 $t_\text{t}$ & temporal resolutions for calculating HB dynamics & \\
-$a_i$ & thermodynamic activity of a chemical species $i$ & \\
+%$a_i$ & thermodynamic activity of a chemical species $i$ & \\
 $d$ & thickness of layer of interface (model) & \\
 $\tau$ & time for switching allegiance of a HB & \\
 $\hat{\mu}(t)$ & unit vector of the transition dipole & \\
